# oneiroi

./: Cargo.toml  LICENSE-MIT  README.md
oneiroi/: Cargo.toml
oneiroi-bevy/: Cargo.toml
oneiroi-bevy/src/: global.rs  lib.rs  main.rs  shader.wgsl
oneiroi-book/: book.toml
oneiroi-book/src/: SUMMARY.md  welcome.md
oneiroi-core/: Cargo.toml
oneiroi-core/src/: curve.rs  lib.rs  main.rs  nurbs.rs
oneiroi-core/src/nurbs/: gpu_cached.rs  nurbs.wgsl
oneiroi-cpp/: Cargo.toml  build.rs
oneiroi-cpp/src/: cache.rs  lib.rs
oneiroi-godot/: Cargo.toml
oneiroi-godot/examples/main/: .gitignore  custom_fence.oni  custom_fence.oni.uid  gdcurve.tres  icon.svg.import  input_sockets_curve_test.tscn  main.tscn  project.godot  ui_test.tscn
oneiroi-godot/examples/main/addons/: oneiroi.gdextension  oneiroi.gdextension.uid
oneiroi-godot/src/: core.rs  editor.rs  lib.rs
oneiroi-godot/src/core/: asset.rs  data_conversion.rs  instance.rs  mesh_conversion_todo_remove_unify_with_data_conversion.rs  serialization.rs
oneiroi-godot/src/editor/: asset_editor.rs  editor_server.rs  geometry_sheet.rs  inspector_plugin.rs
oneiroi-godot/src/editor/asset_editor/: asset_manager.rs  asset_preview.rs  node_editor.rs
oneiroi-godot/src/editor/asset_editor/node_editor/: add_node_popup.rs  add_node_tree.rs  graph_node.rs  node_proxy.rs
oneiroi-godot/src/editor/geometry_sheet/: tree_attribute_display.rs
oneiroi-godot/src/editor/inspector_plugin/: script_editor.rs  script_plugin.rs
oneiroi-wgpu/: Cargo.toml  shader.wgsl
oneiroi-wgpu/src/: lib.rs  main.rs  output.dxil  shader.hlsl
oneiroi/benches/: my_benchmark.rs
oneiroi/src/: asset.rs  data_types.rs  lib.rs  main.rs  mesh.rs  nodes.rs  operations.rs  property.rs  script.rs  serialization.rs  type_system.rs
oneiroi/src/asset/: editable.rs  instance.rs  runtime.rs  server.rs  template.rs  test.rs
oneiroi/src/mesh/: tests.rs
oneiroi/src/mesh/snapshots/: procedural_suite__mesh__tests__compute_box.snap  procedural_suite__mesh__tests__construct_box.snap
oneiroi/src/nodes/: control_flow.rs  modifiers.rs  nodes_enum.rs  producers.rs  transformers.rs
oneiroi/src/nodes/modifiers/: bevel.rs  extrude.rs  set_material.rs
oneiroi/src/nodes/producers/: box.rs  cylinder.rs  distribute_points.rs  helix.rs  material.rs  polygon.rs
oneiroi/src/nodes/transformers/: create_instance.rs  instances_from_transforms.rs  sample_curve.rs  sweep.rs
oneiroi/src/operations/: control_flow.rs  producers.rs
oneiroi/src/operations/modifiers/: extrude.rs
oneiroi/src/operations/producers/: box.rs  cylinder.rs
oneiroi/src/property/: script.rs
oneiroi/src/property/script/: ast.rs
oneiroi/src/type_system/: data_types.rs  reference.rs  trait_types.rs  variants.rs
oneiroi/src/type_system/data_types/: collection.rs  collider.rs  curve.rs  instance.rs  material.rs  mesh.rs  outline.rs  primitives.rs  selection.rs  texture.rs
oneiroi/src/type_system/data_types/mesh/: tests.rs
oneiroi/src/type_system/data_types/mesh/snapshots/: oneiroi__mesh__tests__compute_box.snap  oneiroi__mesh__tests__compute_cylinder.snap  oneiroi__mesh__tests__construct_box.snap
oneiroi/src/type_system/trait_types/: mesh.rs  sequential_sample.rs
