[workspace]
resolver = "3"
members = ["oneiroi-godot", "oneiroi"]
package.authors = ["Mr.Joermungandr"]
package.repository = "https://github.com/oneiroilabs/oneiroi"
package.license = "GPL-3.0-only"
package.readme = "README.md"
package.description = "An engine-agnostic node-based procedural modeling library."

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
