[package]
name = "oneiroi-bevy"
description = "Bevy integration for the Oneiroi procedural-modeling tool."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[dependencies]
bevy = "0.18"
