[package]
name = "oneiroi-bevy"
description = "Bevy integration for the procedural-modeling tool: Oneiroi."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[dependencies]
bevy = { version = "0.19", features = ["free_camera"] }
#wgpu = "29.0.3"
oneiroi.workspace = true
oneiroi-core.workspace = true