[package]
name = "oneiroi-godot"
version = "0.0.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    'api-4-4',
    'experimental-godot-api',
    'experimental-threads',
    'register-docs',
] }

oneiroi = { workspace = true }


[features]
default = ["editor"]
editor = ["oneiroi/editor"]
