[package]
name = "oneiroi-wgpu"
description = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[dependencies]
oneiroi.workspace = true
wgpu = { version = "30.0.0", default-features = false, features = [
    "dx12",
    "wgsl",
    #"renderdoc",
], branch = "work-graphs", git = "https://github.com/kistz/wgpu.git" }
# Temp winit stuff
winit = { version = "0.30.8", features = ["android-native-activity"] }
env_logger = "0.11"
pollster = "0.4"
renderdoc = "0.12"
