[package]
name = "oneiroi-wgpu"
description = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[dependencies]
oneiroi.workspace = true
wgpu = { version = "30.0.0", default-features = false, features = [
    "dx12",
    "wgsl",
    #"renderdoc",
], path = "../../wgpu/wgpu" }

windows = { version = "0", features = [
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D_Dxc",
] }

# Temp winit stuff
winit = { version = "0.30.8", features = ["android-native-activity"] }
env_logger = "0.11"
pollster = "0.4"
renderdoc = "0.12"

oneiroi-core.workspace = true
