[package]
name = "oneiroi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
publish = true

[dependencies]
#slotmap = {package = "slotmap",version = "1.0"}
#bytes = {package = "bytes",version = "1.7"}

#Concurrent HashMap
dashmap = "7.0.0-rc2"

#Math Library
glam = { workspace = true, features = ["serde"] }

itertools = "0.14"

#Immutable Data Structures
im = { package = "imbl", version = "6", features = ["serde", "triomphe"] }

#Efficent Vecs for Mesh
smallvec = { version = "=2.0.0-alpha.10", features = ['serde'] }

#Graph Library
petgraph = { version = "0.8", features = ["serde-1"] }

#Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rustc-hash = "2"

oneiroi-core.workspace = true

#Parallel computation
#rayon =" 1.10"

#Parsing for scripts
chumsky = "0"

color = { version = "0", features = ["serde"] }

fixedbitset = "0"

#Convenient Error Handling
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.38.0", features = ["yaml"] }
cargo-insta = "1.41.1"
# TODO explore the possibilities with this
rstest = "0.24"

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["editor"]
editor = []

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
